--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-    .options-box {
-      background: #fff;
-      border: 1px solid #999;
+.options-box {
+      background: #AFD7CD;
+      border: 3px solid #999;
       border-radius: 3px;
       height: 100%;
       line-height: 35px;
       padding: 10px 10 px 30px 10px;
       text-align: left;
-      width: 340px;
+      width: 350px;
     }
      
     #toggle-drawing {
