--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 html, body {
         height: 100%;
-        margin: 0;
-        padding: 0;
+        margin: 50;
+        /*margin: 100%;*/
+        /*padding: 0;*/
       }
 
       h1, h3 {
@@ -27,32 +28,38 @@ html, body {
       width: 350px;
     }
      
-    #toggle-drawing {
-      width: 27%;
-      position: relative;
-      margin-left: 10px;
-    }
-
-    #zoom-to-area-text {
-      position: relative;
-      width: 70%;
-    }
-
-    #zoom-to-area {
-      width: 24%
-    }
-
     #pano {
       width: 200px;
       height: 200px;
-    }
-
-    #search-within-time-text {
-      width: 84%;
     }
 
     .text {
       font-size: 12px;
     }
 
-   </style>
+    /*.nav {
+      width: 300px;
+      height: 100%;
+      position: absolute;
+      transform: translate(-300px, 0);
+      transition: transform 0.3s ease;
+    }
+
+    .nav.open {
+      transform: translate(0, 0);
+    }
+
+    @media screen and (min-width: 600px) {
+      nav {
+        position: relative;
+        transform: translate(0, 0);
+      }
+      body {
+        display: flex;
+        flex-flow: row nowrap;
+        }  
+        main {
+          width: auto;
+          flex-grow: 1;
+          }  
+        }*/
