--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-html, body {
+html, 
+ body {
   height: 100%;
   margin: 50;
 }
@@ -21,7 +22,7 @@ h1, h3 {
   border: 3px solid #999;
   border-radius: 3px;
   line-height: 35px;
-  padding: 10px 10 px 30px 10px;
+  padding: 10px 10px 30px 10px;
   text-align: left;
   width: 350px;
   z-index: 500;
@@ -44,7 +45,7 @@ h1, h3 {
   z-index: 500;
 }
 
-.closed{
+.closed {
   position: absolute;
   transform: translate(-375px, 0);
   transition: transform 0.3s ease;
